# Comment-Sentiment-Filter

./: .gitignore  README-EN.md  README.md  main.py  pyproject.toml
app/: classifier.py  config.py  main.py  schemas.py
data/: sample_comments.json
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.svelte  app.css
frontend/src/lib/: CommentCard.svelte  CommentInput.svelte  CommentList.svelte  FilterBar.svelte  StatsPanel.svelte  types.ts
tests/: test_api.py  test_classifier.py
training/: dataset.py  evaluate.py  train.py
