[project]
name = "comment-sentiment-filter"
version = "0.1.0"
description = "评论区情感过滤器 - 基于BERT的恶意评论检测与建设性反馈高亮"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "transformers>=4.36.0",
    "torch>=2.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "httpx>=0.25.0"]
train = ["datasets>=2.14.0", "scikit-learn>=1.3.0", "accelerate>=0.24.0"]

[tool.pytest.ini_options]
pythonpath = ["."]
